<resources>
    <string name="sign_in_">用户注册</string>
    <string name="login_in">用户登录</string>
    <string name="user_name_">请输入您的用户名</string>
    <string name="user_pass_">请输入您的密码</string>
    <string name="sure_pass">请确认您的密码</string>
    <string name="input_phone">请输入您的电话号码</string>
    <string name="app_name">烽泰</string>
    <string name="company_support">阿启泰技术支持</string>
    <string name="input_name">用户名/电话号码</string>
    <string name="input_password">密码</string>
    <string name="bind">绑定</string>
    <string name="sign_bttn">注册</string>
    <string name="agree_deal">我同意条款内容</string>
    <string name="check_file">查看条款内容</string>
    <string name="title_home">首页</string>
    <string name="my_pasture">我的牧场</string>
    <string name="sign_in">没有账号,去注册一个</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">个人中心</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">绑定</string>
    <string name="welcome">欢迎来到用户的牧场</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auto_water">智能饮水系统</string>
    <string name="auto_watering">智能灌溉</string>
    <string name="auto_captivity">智能圈舍</string>
    <string name="auto_greens">智能菜棚</string>
    <string name="auto_door">智能大门</string>
    <string name="weather">气象检测</string>
    <string name="auto_feeding">智能饲喂</string>
    <string name="medicine">机械药浴</string>
    <string name="statesheep">牲畜点名</string>
    <string name="watching">监控中心</string>
    <string name="farmdoc">养殖档案</string>
    <string name="farmerdoc">牧户档案</string>
    <string name="statellite">卫星放牧</string>
    <string name="plandoc">种植档案</string>
    <string name="medicinedoc">医疗档案</string>
    <string name="remmber_pss">记住密码</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="personal">个人信息</string>
    <string name="about_as">关于我们</string>
    <string name="service">服务内容</string>
    <string name="head_name">用户</string>
    <string name="find">发现</string>
    <string name="my_msg">个人信息</string>
    <string name="about_us">关于我们</string>
    <string name="quit">退出登录</string>
    <string name="topfarmdoc">牧户档案</string>
    <string name="user_msg">户主信息</string>
    <string name="save">保存</string>
    <string name="idcard1">身份证正面</string>
    <string name="idcard2">身份证反面</string>
    <string name="idcardmsg">身份证信息</string>
    <string name="idnum">身份证</string>
    <string name="idname">姓名</string>
    <string name="idsex">性别</string>
    <string name="bersday">出生日期</string>
    <string name="age">年龄</string>
    <string name="address1">地址(省)</string>
    <string name="address2">地址(市)</string>
    <string name="address3">地址(县)</string>
    <string name="address4">详细地址</string>
    <string name="null_hint">账号或密码不能为空</string>
    <string name="pass_sure">两次输入的密码必须保持一致</string>
    <string name="phonenum">请输入有效的手机号码</string>
    <string name="aotu_login">自动登录</string>
    <string name="autowateringsystem">智能饮水系统</string>
    <string name="autowatering">智能灌溉</string>
    <string name="aotufarm">智能圈舍</string>
    <string name="autogreens">智能菜棚</string>
    <string name="autodoor">智能大门</string>
    <string name="checkwather">气象检测</string>
    <string name="autofeeting">智能饲喂</string>
    <string name="medicien">机械药浴</string>
    <string name="checksheep">牲畜点名</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member_name">成员信息</string>
    <string name="member_total">收入支出</string>
    <string name="member_area">草原面积</string>
    <string name="member_compensate">牧户补贴</string>

</resources>