<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackblue">

    <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
                android:id="@+id/TOPbackground"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:background="@drawable/bg01"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_gravity="center_horizontal">

            <ImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_return"
                    android:layout_marginLeft="16dp"/>
        <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_"
                android:layout_marginLeft="128dp"
                android:textSize="20dp"/>
        </LinearLayout>
        <ImageView
                android:id="@+id/pic1"
                android:layout_width="378dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="65dp"
                android:layout_height="180dp"
                android:background="@drawable/banner"/>

    </FrameLayout>

    <LinearLayout

            android:id="@+id/line1"
            android:orientation="vertical"
            android:layout_below="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <EditText
                android:id="@+id/user_name_sign"
                android:layout_width="378dp"
                android:layout_height="48dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_user"
                android:textColorHint="@drawable/white"
                android:hint="@string/user_name_"/>
        <EditText
                android:id="@+id/user_pass_sign"
                android:layout_width="378dp"
                android:layout_height="48dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_password"
                android:textColorHint="@drawable/white"
                android:hint="@string/user_pass_"/>
        <EditText
                android:id="@+id/sure_pass_sign"
                android:layout_width="378dp"
                android:layout_height="48dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_password"
                android:textColorHint="@drawable/white"
                android:hint="@string/sure_pass"/>
        <EditText
                android:id="@+id/user_phone_sign"
                android:layout_width="378dp"
                android:layout_height="48dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_phone"
                android:textColorHint="@drawable/white"
                android:hint="@string/input_phone"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

            <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_deal"/>

        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_file"
                android:layout_gravity="center"/>

        <Button
                android:id="@+id/btt_sign_up"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorbutton"
                android:gravity="center"
                android:alpha="0.3"
                android:text="@string/sign_bttn"
                android:textSize="18sp"/>
    </LinearLayout>

    <FrameLayout
            android:layout_below="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <ImageView

                android:id="@+id/belowbackground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/company_support"
                android:layout_marginTop="30dp"/>


    </FrameLayout>


</RelativeLayout>