<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackblue"
        tools:context=".MainActivity">

    <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
    />

    <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
                android:id="@+id/TOPbackground"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:background="@drawable/bg01"/>
        <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login_in"
                android:textSize="20dp"
                android:textColorHint="@drawable/white"
                android:layout_marginTop="27dp"
                android:layout_gravity="center_horizontal"/>

        <ImageView
                android:id="@+id/pic1"
                android:layout_width="378dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="65dp"
                android:layout_height="199dp"
                android:background="@drawable/banner"/>

    </FrameLayout>


    <LinearLayout
            android:id="@+id/line1"
            android:orientation="vertical"
            android:layout_below="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="40dp">

        <EditText
                android:id="@+id/user_name_login"
                android:layout_width="378dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:lines="1"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_phone"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_name"/>
        <FrameLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
                android:id="@+id/user_pass_login"
                android:layout_width="378dp"
                android:layout_height="48dp"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="12dp"
                android:drawablePadding="8dp"
                android:textSize="18dp"
                android:drawableLeft="@drawable/ic_password"
                android:textColorHint="@color/colorTextGrey"
                android:hint="@string/input_password"/>

            <ToggleButton
                android:id="@+id/togglebtton"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="340dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:padding="10dp"
                android:background="@drawable/selector_pwd"
                android:textOff=" "
                android:textOn="" />
        </FrameLayout>
        <LinearLayout
                android:id="@+id/line2"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
            <CheckBox
                    android:id="@+id/remmber_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/remmber_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remmber_pss"
                    android:layout_marginLeft="5dp"/>

            <CheckBox
                    android:layout_marginLeft="90dp"
                    android:id="@+id/aotu_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/aotu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aotu_login"
                    android:layout_marginLeft="5dp"/>


        </LinearLayout>

        <TextView
                android:id="@+id/bttn_sign_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginLeft="210dp"
                android:layout_marginTop="20dp"/>


    </LinearLayout>

    <FrameLayout
            android:layout_below="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <ImageView

                android:id="@+id/belowbackground"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg"/>
        <Button
                android:id="@+id/bttn_loign_in"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@color/colorbutton"
                android:gravity="center"
                android:alpha="0.3"
                android:text="@string/bind"
                android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/company_support"
                android:layout_marginTop="120dp"/>



    </FrameLayout>


</RelativeLayout>